--- a/composer.json
+++ b/composer.json
@@ -30,16 +30,17 @@
         "laravelcollective/html": "^6.1",
         "league/flysystem-aws-s3-v3": "^1.0",
         "mcamara/laravel-localization": "^1.3.19",
+        "onethirtyone/laravel-s3-migrate": "^2.2",
         "owen-it/laravel-auditing": "^v13.0.2",
         "pdfanonymous/phpanonymous": "dev-master",
         "predis/predis": "^1.1",
         "propaganistas/laravel-phone": "^4.2",
-        "onethirtyone/laravel-s3-migrate": "^2.2",
         "spatie/fractalistic": "^2.8",
         "spatie/laravel-backup": "^6.11",
         "spatie/laravel-event-sourcing": "^5.0",
         "spatie/laravel-fractal": "^5.5",
-        "spatie/laravel-queued-db-cleanup": "^1.1.2"
+        "spatie/laravel-queued-db-cleanup": "^1.1.2",
+        "twilio/sdk": "^6.42"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
