--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,7 @@
         "spatie/laravel-backup": "^6.11",
         "spatie/laravel-event-sourcing": "^5.0",
         "spatie/laravel-fractal": "^5.5",
+        "spatie/laravel-permission": "^5.10",
         "spatie/laravel-queued-db-cleanup": "^1.1.2",
         "twilio/sdk": "^6.42",
         "vimeo/laravel": "^5.7"
