--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
         "spatie/laravel-fractal": "^5.5",
         "spatie/laravel-permission": "^5.10",
         "spatie/laravel-queued-db-cleanup": "^1.1.2",
+        "stripe/stripe-php": "^14.7",
         "twilio/sdk": "^6.42",
         "vimeo/laravel": "^5.7"
     },
