fix event image

--- a/.gitignore
+++ b/.gitignore
@@ -9,17 +9,8 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
-/public/docs
-/public/storage
-/public/uploads
-/storage/*.key
-/storage/*.index
-/storage/purify
-/storage/garbage_media/*.*
-/storage/uploads/*.*
-/storage/logs/*
-/public/purple/
-storage/logs/laravel.log
+public
+storage
 _ide_helper.php
 _ide_helper_models.php
 /.docker-data
