--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 /node_modules
 /.idea
 /public/hot
+/public/storage
+/storage
 /vendor
 .env
 .env.testing
@@ -9,8 +11,6 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
-public
-storage
 _ide_helper.php
 _ide_helper_models.php
 /.docker-data
